# networking_sfml

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Enemy.h  Game.cpp  Game.cpp~  Makefile~  Network.cpp~  Network.h  Player.h  main.cpp
Client/source/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  Network.cpp  Player.cpp  Player.h
Server/: CMakeLists.txt  Makefile~  Server.cpp~  Server.h  Server.h~
Server/source/: Player.cpp  Player.h  Server.cpp  main.cpp
